--- a/.env
+++ b/.env
@@ -3,11 +3,11 @@ PORT=8080
 
 # Database
 DB_DRIVER=mysql
-DB_HOST=localhost
+DB_HOST=db
 
 # Creds (Edit these if you want - ~~~EXCEPT~~~ the DB_SCHEMA)
-MYSQL_PORT=3307
-MYSQL_USERNAME=app
-MYSQL_PASS=secret
-MYSQL_SCHEMA=blog
-MYSQL_TIMEOUT=15
+DB_PORT=3307
+DB_USERNAME=app
+DB_PASSWORD=secret
+DB_SCHEMA=blog
+DB_TIMEOUT=15
